--- a/src/Header.css
+++ b/src/Header.css
@@ -1,4 +1,4 @@
 .header-main {
-    background-color: #0002de;
-    background-image: linear-gradient(90deg, #0002de 0%, #f711fb 50%, #ffffff 100%);
+background-color: #4158D0;
+background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 }
